--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@oclif/errors": "1",
     "@salesforce/command": "^1.0.1",
     "@salesforce/core": "^1.0.1",
-    "tslib": "1"
+    "fs": "^0.0.1-security",
+    "tslib": "1",
+    "xml-writer": "^1.7.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
