Adding in initial version of the config checking tool including a check for descriptions in various metadata types, check for process builder naming conventions and 1 process builder per object

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@salesforce/command": "^1.0.1",
     "@salesforce/core": "^1.0.1",
     "decompress": "^4.2.0",
+    "fast-glob": "^3.1.1",
     "fs": "^0.0.1-security",
     "tslib": "1"
   },
