--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@salesforce/core": "^1.0.1",
     "decompress": "^4.2.0",
     "fs": "^0.0.1-security",
+    "sfdx-js": "^4.5.0",
     "tslib": "1"
   },
   "devDependencies": {
