Pushing initial copy of the meta fomat fixer

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@oclif/command": "1",
     "@oclif/config": "1",
     "@oclif/errors": "1",
-    "@salesforce/command": "^1.0.1",
-    "@salesforce/core": "^1.0.1",
+    "@salesforce/command": "^2.0.1",
+    "@salesforce/core": "^2.0.1",
     "decompress": "^4.2.0",
     "fs": "^0.0.1-security",
+    "glob": "^7.1.6",
+    "glob-promise": "^3.4.0",
     "sfdx-js": "^4.5.0",
     "tslib": "1"
   },
