--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nyc": "15.1.0",
     "sinon": "5.1.1",
     "ts-node": "7.0.1",
-    "typescript": "3.8.3"
+    "tslint": "6.1.3",
+    "typescript": "3.9.7"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -64,6 +65,7 @@
     "posttest": "tslint -p test -t stylish",
     "prepare": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "fix": "tslint -p test -t stylish --fix"
   }
 }
